Harden machine principal configuration and request authentication